--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,16 @@
 ---
 layout: compress
 ---
-
 <!doctype html>
 <html>
+  <!-- Head -->
   {% include head.html %}
   <body class="page">
-    {% include head.html %}
     <!-- Content -->
     <main class="page-content">
         {{ content }}
     </main>
   </body>
+  <!-- Footer -->
+  {% include footer.html %}
 </html>
