--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,8 @@
   </div>
   <div class="footer set-right">
     <p><a href="#">Contact</a></p>
-    <p><a href="#">Blog</a></p>
-    <p><a href="#">About</a></p>
+    <p><a href="">Blog</a></p>
+    <p><a href="{{ site.baseurl }}{{ site.pages }}//about">About</a></p>
+    <p><a href="{{ site.baseurl }}{{ site.pages }}//impressum">Impressum</a></p>
   </div>
 </footer>
