--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
   <div class="footer set-right">
     <p><a href="#">Contact</a></p>
     <p><a href="">Blog</a></p>
-    <p><a href="{{ site.baseurl }}{{ site.pages }}//about">About</a></p>
-    <p><a href="{{ site.baseurl }}{{ site.pages }}//impressum">Impressum</a></p>
+    <p><a href="{{ site.baseurl }}{{ pages }}/about">About</a></p>
+    <p><a href="{{ site.baseurl }}{{ pages.url }}/impressum">Impressum</a></p>
   </div>
 </footer>
