--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,6 @@
     <p><a href="#">Contact</a></p>
     <p><a href="">Blog</a></p>
     <p><a href="{{ site.baseurl }}{{ pages }}/about">About</a></p>
-    <p><a href="{{ site.baseurl }}{{ pages.url }}/impressum">Impressum</a></p>
+    <p><a href="{{ site.baseurl }}{{ site.pages.url }}/impressum">Impressum</a></p>
   </div>
 </footer>
