--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,14 @@ layout: compress
 <!doctype html>
 <html>
   <!-- Head -->
-  {% include head.html %}
+  {%include head.html%}
+  {%include nav.html%}
   <body class="page">
     <!-- Content -->
     <main class="page-content">
-        {{ content }}
+        {{content}}
     </main>
   </body>
   <!-- Footer -->
-  {% include footer.html %}
+  {%include footer.html%}
 </html>
