--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <div class="navbar-brand">
     <i class="fas fa-circle-notch"></i>
-    <a class="navbar-item" href="{{site.url}}">
+    <a class="navbar-item" href="{{site.baseurl}}">
       <h1>{{site.title}}</h1>
     </a>
   </div>
