--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
 <nav class="navbar">
   <div class="navbar-brand">
-    <i class="fas fa-circle-notch"></i>
-    <a class="navbar-item" href="{{site.baseurl}}">
-      <h1>{{site.title}}</h1>
+    <i class="fas fa-circle-notch title"></i>
+    <a class="navbar-item" href="{{site.url}}">
+      <h1 class="title">{{site.title}}</h1>
     </a>
   </div>
   <div class="navbar-menu">
