fix footer responsive wip

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,6 +4,11 @@
     <a class="navbar-item" href="{{site.url}}">
       <h1 class="title">{{site.title}}</h1>
     </a>
+    <span class="navbar-burger burger" onclick="document.querySelector('.navbar-menu').classList.toggle('is-active');">
+      <span></span>
+      <span></span>
+      <span></span>
+    </span>
   </div>
   <div class="navbar-menu">
     <div class="navbar-end">
