--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,9 +8,7 @@
         {%- assign curkey = link[0] -%}
         {%- assign element = site.data.SocialNetworks[curkey] -%}
           <a href="{{element.baseURL}}{{site.social-network-links[curkey]}}" target="_blank">
-            {%- if curkey == 'email' -%}
-            <i class="fas {{element.icon}}"></i></a>
-            {%- else -%}
+            {%- if curkey != 'email' and curkey != 'spotify' -%}
             <i class="fab {{element.icon}}"></i></a>
           {%- endif -%}
       {%- endfor -%}
@@ -24,7 +22,7 @@
       <span class="mdot"></span>
       <a href="{{site.baseurl}}{%link pages/about.md%}">about</a>
       <span class="mdot"></span>
-      <a href="{{site.baseurl}}{%link pages/impressum.md%}">impressum</a>
+      <a href="{{site.baseurl}}{%link pages/imprint.md%}">imprint</a>
     </div>
   </div>
 </footer>
